edit siteCreation elment

--- a/index.html
+++ b/index.html
@@ -34,14 +34,54 @@
                     <div class="mainText">
                         <p class="mobileApps">Мы создаем мобильные приложения для крупных корпораций</p>
                         <p class="otherText">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне
-                            Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
                         </p>
                     </div>
-                    <div class="siteCreation">
+                    <!-- <div class="siteCreation">
                         <div class="item1"><img src="/images/services__item.png" alt="itemOne"></div>
                         <div class="item2"><img src="/images/services__item.png" alt="itemTwo"></div>
                         <div class="item3"><img src="/images/services__item.png" alt="item3"></div>
-                        
+                    </div> -->
+                    <div class="siteCreation">
+                        <div class="siteCreationItem">
+                            <div class="pictureItem">
+                                <div class="innerCircle">
+                                    <img class="innerIcon" src="./images/project (2).png"/>
+                                </div>
+                            </div>
+                            <div class="infoItem">
+                                <p class="infoHeader">
+                                    Создание сайтов
+                                </p>
+                                <p class="infoParagraph">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+                            </div>
+                        </div>
+                        <div class="siteCreationItem">
+                            <div class="pictureItem">
+                                <div class="innerCircle">
+                                    <img class="innerIcon" src="./images/project (2).png"/>
+                                </div>
+                            </div>
+                            <div class="infoItem">
+                                <p class="infoHeader">
+                                    Создание сайтов
+                                </p>
+                                <p class="infoParagraph">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+                            </div>
+                        </div>
+                        <div class="siteCreationItem">
+                            <div class="pictureItem">
+                                <div class="innerCircle">
+                                    <img class="innerIcon" src="./images/project (2).png"/>
+                                </div>
+                            </div>
+                            <div class="infoItem">
+                                <p class="infoHeader">
+                                    Создание сайтов
+                                </p>
+                                <p class="infoParagraph">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+                            </div>
+                        </div>
+
                     </div>
                     <button class="btn" type="button">Все услуги</button>
                 </section>
