--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                             <li><a href="#">Новости</a></li>
                             <li><a href="#">Контакты</a></li>
                         </ul>
+                        <div class="burgerMenu">
+                            <div class="burgerItem"></div>
+                            <div class="burgerItem"></div>
+                            <div class="burgerItem"></div>
+                        </div>
                     </nav>
                     <div class="MainInfo">
                         <p class="studio">Передовая IT студия</p>
@@ -36,11 +41,6 @@
                         <p class="otherText">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне
                         </p>
                     </div>
-                    <!-- <div class="siteCreation">
-                        <div class="item1"><img src="/images/services__item.png" alt="itemOne"></div>
-                        <div class="item2"><img src="/images/services__item.png" alt="itemTwo"></div>
-                        <div class="item3"><img src="/images/services__item.png" alt="item3"></div>
-                    </div> -->
                     <div class="siteCreation">
                         <div class="siteCreationItem">
                             <div class="pictureItem">
@@ -96,12 +96,43 @@
                         <div class="standartsPic"></div>
                     </div>
                     <div class="ourProjects">
-                        <img src="/images/about_us__numbers.png" alt="about1">
-                        <img src="/images/about_us__numbers.png" alt="about2">
-                        <img src="/images/about_us__numbers.png" alt="about3">
-                        <img src="/images/about_us__numbers.png" alt="about4">
-                        <img src="/images/about_us__numbers.png" alt="about5">
+                        <div class="ourProjectsElement">
+                            <div class="ourProjectTitle">
+                                <img src="/images/web-programming.png" alt="firstprogramming">
+                                <p class="projectText">125</p>
+                            </div>
+                            <p class="OurProjectMain">Our projects</p>
+                        </div>
+                        <div class="ourProjectsElement">
+                            <div class="ourProjectTitle">
+                                <img src="/images/web-programming.png" alt="firstprogramming">
+                                <p class="projectText">125</p>
+                            </div>
+                            <p class="OurProjectMain">Our projects</p>
+                        </div>
+                        <div class="ourProjectsElement">
+                            <div class="ourProjectTitle">
+                                <img src="/images/web-programming.png" alt="firstprogramming">
+                                <p class="projectText">125</p>
+                            </div>
+                            <p class="OurProjectMain">Our projects</p>
+                        </div>
+                        <div class="ourProjectsElement">
+                            <div class="ourProjectTitle">
+                                <img src="/images/web-programming.png" alt="firstprogramming">
+                                <p class="projectText">125</p>
+                            </div>
+                            <p class="OurProjectMain">Our projects</p>
+                        </div>
+                        <div class="ourProjectsElement">
+                            <div class="ourProjectTitle">
+                                <img src="/images/web-programming.png" alt="firstprogramming">
+                                <p class="projectText">125</p>
+                            </div>
+                            <p class="OurProjectMain">Our projects</p>
+                        </div>
                     </div> 
+                    
                 </section>
 
                 <section class="projects">
